--- a/src/views/index.html
+++ b/src/views/index.html
@@ -4,6 +4,7 @@
         hello
         <input id="script-textbox" type="text">
         <button id="run-script-button">run script</button>
+        <div id="results"></div>
     </body>
 </html>
 <script src="js/script.js"></script>
