--- a/src/views/login.html
+++ b/src/views/login.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
         <style>
             body {
                 margin: 0px;
                 height: 100vh;
                 font-weight: bold;
-                font-family: Arial, Helvetica, sans-serif;
+                font-family: 'Roboto', sans-serif;
             }
 
             .half-container {
@@ -28,13 +31,26 @@
 
             .left-container {
                 margin: auto;
-                width: 35%;
+                width: 25rem;
                 text-align: center;
                 display: flex;
                 flex-direction: column;
                 flex-wrap: nowrap;
                 align-items: center;
                 justify-content: center;
+            }
+            
+            .toggle-container {
+                background-color: #FCE5F1; 
+                margin-bottom: 10px; 
+                padding: 5px; 
+                width: 100%; 
+                border-radius: 10px; 
+                height: 40px; 
+                align-items: center; 
+                display: flex; 
+                flex-direction: row; 
+                justify-content: space-evenly;
             }
 
             .input-before {
@@ -43,6 +59,7 @@
 
             .input-after {
                 text-align: left;
+                height: 100%;
             }
 
             .input {
@@ -58,7 +75,7 @@
             }
 
             .sign-in-btn {
-                margin-top: 10px;
+                margin-top: 20px;
                 display: flex;
                 width: 100%;
                 height: 45px;
@@ -78,6 +95,40 @@
                 min-width: 100%;
                 min-height: 100%
             }
+
+            input {
+                border: none;
+                padding: 0px;
+            }
+
+            textarea:focus, input:focus{
+                outline: none;
+            }
+
+            hr.or-google-divider {
+                margin-top: 30px;
+                width: 100%;
+                padding: 0;
+                overflow: visible;
+                border: none;
+                border-top: 1px solid #e0e0e0;
+                color: #E3E1E3;
+                text-align: center;
+            }
+
+            hr.or-google-divider:after {
+                content: 'Or';
+                display: inline-block;
+                position: relative;
+                top: -10px;
+                padding: 0 16px;
+                background: #fff;
+                color: #7E6D80;
+            }
+
+            #login-input-email, #login-input-password {
+                height: 100%;
+            }
         </style>
     </head>
     <body>
@@ -85,25 +136,26 @@
             <div class="half-container" style="text-align: center">
                 <div class="left-container">
                     <div><h1>Welcome back!</h1></div>
-                    <div style="background-color: #FCE5F1; padding: 5px; width: 100%; border-radius: 10px; height: 40px; align-items: center; display: flex; flex-direction: row; justify-content: space-evenly;">
+                    <div class="toggle-container">
                         <div class="active sign-in-toggle">Sign In</div>
                         <div class="sign-up-toggle">Sign Up</div>
                     </div>
                     <div class="input">
                         <div class="input-before">@</div>
                         <div class="input-after">
-                            <div style="color: #7E6D80">Email</div>
-                            <div>example@example.com</div>
+                            <!-- <div style="color: #7E6D80">Email</div> -->
+                            <input id="login-input-email" type="email" placeholder="Email"/>
                         </div>
                     </div>
                     <div class="input">
-                        <div class="input-before">🔑</div>
+                        <div class="input-before">@</div>
                         <div class="input-after">
-                            <div style="color: #7E6D80">Password</div>
-                            <div>********</div>
+                            <!-- <div style="color: #7E6D80">Password</div> -->
+                            <input id="login-input-password" type="password" placeholder="Password"/>
                         </div>
                     </div>
                     <div class="sign-in-btn">Sign in</div>
+                    <hr class="or-google-divider"></hr>
                 </div>
             </div>
             <div class="half-container fill" style="height: 98%"><img style="height: auto;  border-radius: 50px 0px;" src="img/eye_candy.png"></div>
