--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -71,13 +71,24 @@ body {
     margin-top: 20px;
     display: flex;
     width: 100%;
-    height: 45px;
+    height: 50px;
     justify-content: center;
     align-items: center;
     border-radius: 12px;
     color: white;
     background: var(--gradient, linear-gradient(45deg, #B287AE 0.01%, #DF98C3 49.97%, #FDA4CF 100%));
     box-shadow: 0px 6px 16px 0px rgba(251, 164, 206, 0.30);
+}
+
+.google-sign-in-btn {
+    display: flex;
+    width: 100%;
+    height: 50px;
+    justify-content: center;
+    align-items: center;
+    color: #7E6D80;
+    border-radius: 12px;
+    border: 1px solid #E3E1E3;
 }
 
 .fill {
