--- a/src/views/login.html
+++ b/src/views/login.html
@@ -10,6 +10,7 @@
         <div style="display: flex; width: 100%; height: 100%; flex-direction: row; align-items: center; justify-content: center;">
             <div class="half-container" style="text-align: center">
                 <div class="left-container">
+                    <img src="img/full_logo.png">
                     <div><h1>Welcome back!</h1></div>
                     <div class="toggle-container">
                         <div class="active sign-in-toggle">Sign In</div>
@@ -29,8 +30,9 @@
                             <input id="login-input-password" type="password" placeholder="Password"/>
                         </div>
                     </div>
-                    <div class="sign-in-btn">Sign in</div>
+                    <div class="sign-in-btn">Sign In</div>
                     <hr class="or-google-divider"></hr>
+                    <div class="google-sign-in-btn">Sign in with Google</div>
                 </div>
             </div>
             <div class="half-container fill" style="height: 98%"><img style="height: auto;  border-radius: 50px 0px;" src="img/eye_candy.png"></div>
