--- a/src/views/login.html
+++ b/src/views/login.html
@@ -10,8 +10,8 @@
         <div style="display: flex; width: 100%; height: 100%; flex-direction: row; align-items: center; justify-content: center;">
             <div class="half-container" style="text-align: center">
                 <div class="left-container">
-                    <img src="img/full_logo.png">
-                    <div><h1>Welcome back!</h1></div>
+                    <img class="login-logo" src="img/full_logo.svg">
+                    <div class="welcome-back">Welcome back!</div>
                     <div class="toggle-container">
                         <div class="active sign-in-toggle">Sign In</div>
                         <div class="sign-up-toggle">Sign Up</div>
