--- a/src/views/login.html
+++ b/src/views/login.html
@@ -5,6 +5,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/login.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     </head>
     <body>
         <div style="display: flex; width: 100%; height: 100%; flex-direction: row; align-items: center; justify-content: center;">
@@ -17,14 +18,18 @@
                         <div class="sign-up-toggle">Sign Up</div>
                     </div>
                     <div class="input">
-                        <div class="input-before">@</div>
+                        <div class="input-before">
+                            <i class="bi-at" style="font-size: 2rem;"></i>
+                        </div>
                         <div class="input-after">
                             <!-- <div style="color: #7E6D80">Email</div> -->
                             <input id="login-input-email" type="email" placeholder="Email"/>
                         </div>
                     </div>
                     <div class="input">
-                        <div class="input-before">@</div>
+                        <div class="input-before">
+                            <i class="bi-key" style="font-size: 2rem;"></i>
+                        </div>
                         <div class="input-after">
                             <!-- <div style="color: #7E6D80">Password</div> -->
                             <input id="login-input-password" type="password" placeholder="Password"/>
