--- a/src/views/login.html
+++ b/src/views/login.html
@@ -37,7 +37,7 @@
                     </div>
                     <div class="sign-in-btn">Sign In</div>
                     <hr class="or-google-divider"></hr>
-                    <div class="google-sign-in-btn">Sign in with Google</div>
+                    <div class="google-sign-in-btn"><img style="margin-right: 10px;" src="img/google_icon.svg"></i> Sign in with Google</div>
                 </div>
             </div>
             <div class="half-container fill" style="height: 98%"><img style="height: auto;  border-radius: 50px 0px;" src="img/eye_candy.png"></div>
