--- a/src/views/login.html
+++ b/src/views/login.html
@@ -35,7 +35,7 @@
                             <input id="login-input-password" type="password" placeholder="Password"/>
                         </div>
                     </div>
-                    <div class="sign-in-btn">Sign In</div>
+                    <div id="sign-in-btn">Sign In</div>
                     <hr class="or-google-divider"></hr>
                     <div class="google-sign-in-btn"><img style="margin-right: 10px;" src="img/google_icon.svg"></i> Sign in with Google</div>
                 </div>
@@ -44,3 +44,4 @@
         </div>
     </body>
 </html>
+<script src="js/login.js"></script>
