create .r file from user input
create input file from user's input and read input file to execute the script

--- a/src/views/analyze.html
+++ b/src/views/analyze.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
     <body>
-        hello
-        <input id="script-textbox" type="text">
+        <textarea id="script-textbox"></textarea>
         <button id="run-script-button">run script</button>
         <div id="results"></div>
     </body>
