--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -1,21 +1,9 @@
-$main-font: 'Roboto', sans-serif;
-$main-font-color: #130214;
-$secondary-font-color: #7e6d80;
-$active-color: #fff;
-$main-shadow: 0px 2px 10px 0px rgba(142, 118, 157, 0.22);
-$btn-shadow: 0px 6px 16px 0px rgba(251, 164, 206, 0.3);
-
 body {
   margin: 0px;
   height: 100vh;
-  color: $main-font-color;
+  color: #130214;
   font-weight: bold;
-  font-family: $main-font;
-}
-
-@mixin flex-center {
-  display: flex;
-  align-items: center;
+  font-family: "Roboto", sans-serif;
 }
 
 .feather {
@@ -34,12 +22,13 @@ body {
 }
 
 .active {
-  background-color: $active-color;
-  color: $main-font-color !important;
+  background-color: #fff;
+  color: #130214 !important;
 }
 
 .toggle-container {
-  @include flex-center();
+  display: flex;
+  align-items: center;
   background-color: #fce5f1;
   margin-bottom: 10px;
   width: 100%;
@@ -56,7 +45,7 @@ body {
   width: 49%;
   padding: 13px 0px;
   border-radius: 10px;
-  color: $secondary-font-color;
+  color: #7e6d80;
 }
 
 .login-logo {
@@ -72,7 +61,8 @@ body {
 }
 
 .left-container {
-  @include flex-center();
+  display: flex;
+  align-items: center;
   margin: auto;
   width: 25rem;
   text-align: center;
@@ -82,28 +72,28 @@ body {
 }
 
 .input {
-  @include flex-center();
+  display: flex;
+  align-items: center;
   margin-top: 10px;
   width: 100%;
   height: 60px;
   flex-direction: row;
   border-radius: 10px;
-  box-shadow: $main-shadow;
-
-  &-before {
-    padding: 0px 10px;
-  }
-
-  &-after {
-    text-align: left;
-    height: 100%;
-    padding-right: 15px;
-    width: 100%;
-  }
+  box-shadow: 0px 2px 10px 0px rgba(142, 118, 157, 0.22);
+}
+.input-before {
+  padding: 0px 10px;
+}
+.input-after {
+  text-align: left;
+  height: 100%;
+  padding-right: 15px;
+  width: 100%;
 }
 
 #sign-in-btn {
-  @include flex-center();
+  display: flex;
+  align-items: center;
   margin-top: 20px;
   width: 100%;
   height: 50px;
@@ -111,15 +101,16 @@ body {
   border-radius: 12px;
   color: white;
   background: var(--gradient, linear-gradient(45deg, #b287ae 0.01%, #df98c3 49.97%, #fda4cf 100%));
-  box-shadow: $btn-shadow;
+  box-shadow: 0px 6px 16px 0px rgba(251, 164, 206, 0.3);
 }
 
 .google-sign-in-btn {
-  @include flex-center();
+  display: flex;
+  align-items: center;
   width: 100%;
   height: 50px;
   justify-content: center;
-  color: $secondary-font-color;
+  color: #7e6d80;
   border-radius: 12px;
   border: 1px solid #e3e1e3;
 }
@@ -128,6 +119,7 @@ body {
   display: flex;
   overflow: hidden;
 }
+
 .fill img {
   min-width: 100%;
   min-height: 100%;
@@ -136,8 +128,8 @@ body {
 input {
   border: none;
   padding: 0px;
-  color: $main-font-color;
-  font-family: $main-font;
+  color: #130214;
+  font-family: "Roboto", sans-serif;
   font-size: 0.95rem;
   font-weight: 600;
   width: 100%;
@@ -160,16 +152,16 @@ hr.or-google-divider {
 }
 
 hr.or-google-divider:after {
-  content: 'Or';
+  content: "Or";
   display: inline-block;
   position: relative;
   top: -10px;
   padding: 0 16px;
-  background: $active-color;
-  color: $secondary-font-color;
+  background: #fff;
+  color: #7e6d80;
 }
 
 #login-input-email,
 #login-input-password {
   height: 100%;
-}
+}/*# sourceMappingURL=main.css.map */
