--- a/src/public/css/pages/_login.scss
+++ b/src/public/css/pages/_login.scss
@@ -1,9 +1,12 @@
+// This page should contain the css exclusive to login.html 
+// TODO: remove reused assets and move to respective files
+
 body {
   margin: 0px;
   height: 100vh;
-  color: #130214;
+  color: $main-font-color;
   font-weight: bold;
-  font-family: "Roboto", sans-serif;
+  font-family: $main-font;
 }
 
 .feather {
@@ -22,13 +25,12 @@ body {
 }
 
 .active {
-  background-color: #fff;
-  color: #130214 !important;
+  background-color: $active-color;
+  color: $main-font-color !important;
 }
 
 .toggle-container {
-  display: flex;
-  align-items: center;
+  @include flex-center();
   background-color: #fce5f1;
   margin-bottom: 10px;
   width: 100%;
@@ -45,7 +47,7 @@ body {
   width: 49%;
   padding: 13px 0px;
   border-radius: 10px;
-  color: #7e6d80;
+  color: $secondary-font-color;
 }
 
 .login-logo {
@@ -61,8 +63,7 @@ body {
 }
 
 .left-container {
-  display: flex;
-  align-items: center;
+  @include flex-center();
   margin: auto;
   width: 25rem;
   text-align: center;
@@ -72,28 +73,28 @@ body {
 }
 
 .input {
-  display: flex;
-  align-items: center;
+  @include flex-center();
   margin-top: 10px;
   width: 100%;
   height: 60px;
   flex-direction: row;
   border-radius: 10px;
-  box-shadow: 0px 2px 10px 0px rgba(142, 118, 157, 0.22);
-}
-.input-before {
-  padding: 0px 10px;
-}
-.input-after {
-  text-align: left;
-  height: 100%;
-  padding-right: 15px;
-  width: 100%;
+  box-shadow: $main-shadow;
+
+  &-before {
+    padding: 0px 10px;
+  }
+
+  &-after {
+    text-align: left;
+    height: 100%;
+    padding-right: 15px;
+    width: 100%;
+  }
 }
 
 #sign-in-btn {
-  display: flex;
-  align-items: center;
+  @include flex-center();
   margin-top: 20px;
   width: 100%;
   height: 50px;
@@ -101,16 +102,15 @@ body {
   border-radius: 12px;
   color: white;
   background: var(--gradient, linear-gradient(45deg, #b287ae 0.01%, #df98c3 49.97%, #fda4cf 100%));
-  box-shadow: 0px 6px 16px 0px rgba(251, 164, 206, 0.3);
+  box-shadow: $btn-shadow;
 }
 
 .google-sign-in-btn {
-  display: flex;
-  align-items: center;
+  @include flex-center();
   width: 100%;
   height: 50px;
   justify-content: center;
-  color: #7e6d80;
+  color: $secondary-font-color;
   border-radius: 12px;
   border: 1px solid #e3e1e3;
 }
@@ -119,7 +119,6 @@ body {
   display: flex;
   overflow: hidden;
 }
-
 .fill img {
   min-width: 100%;
   min-height: 100%;
@@ -128,8 +127,8 @@ body {
 input {
   border: none;
   padding: 0px;
-  color: #130214;
-  font-family: "Roboto", sans-serif;
+  color: $main-font-color;
+  font-family: $main-font;
   font-size: 0.95rem;
   font-weight: 600;
   width: 100%;
@@ -152,16 +151,16 @@ hr.or-google-divider {
 }
 
 hr.or-google-divider:after {
-  content: "Or";
+  content: 'Or';
   display: inline-block;
   position: relative;
   top: -10px;
   padding: 0 16px;
-  background: #fff;
-  color: #7e6d80;
+  background: $active-color;
+  color: $secondary-font-color;
 }
 
 #login-input-email,
 #login-input-password {
   height: 100%;
-}/*# sourceMappingURL=login.css.map */
+}
