--- a/src/views/analyze.html
+++ b/src/views/analyze.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="css/main.css">
 <html>
-    <body>
-        <textarea id="script-textbox"></textarea>
-        <button id="run-script-button">run script</button>
-        <div id="results"></div>
-    </body>
+  <head>
+    <title>Analyze</title>
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
+  <body>
+    <div id="navbar">
+        <div class="navbar-item-group">
+          <a href="home.html"><img id="navbar-logo" src="img/navbar_logo.svg"></a>
+          <a class="navbar-link" href="home.html">Home</a>
+          <a class="navbar-link" href="analyze.html">Analyze</a>
+          <a class="navbar-link" href="history.html">History</a>
+          <a class="navbar-link" href="admin.html">Admin</a>
+          <a class="navbar-link" href="help.html">Help</a>
+        </div>
+        <div class="navbar-item-group navbar-item-group-right">
+          <img id="navbar-user-icon" src="img/person.svg">
+          <div id="navbar-user">John Doe</div>
+          <img class="down-arrow-icon" src="img/arrow_drop_down.svg">
+        </div>
+      </div>
+
+    <textarea id="script-textbox"></textarea>
+    <button id="run-script-button">run script</button>
+    <div id="results"></div>
+  </body>
 </html>
 <script src="js/script.js"></script>
