--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -1,3 +1,51 @@
+#navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 1600px;
+  height: 70px;
+  background: #fff;
+}
+#navbar .navbar-item-group, #navbar .navbar-item-group-right, #navbar .navbar-link {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  color: #926296;
+  font-size: 13px;
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: -0.39px;
+}
+#navbar .navbar-link {
+  text-decoration: none;
+  cursor: pointer;
+}
+#navbar .navbar-link:hover {
+  color: pink;
+}
+#navbar .navbar-link.active {
+  color: #130214;
+}
+#navbar .navbar-item-group-right {
+  gap: 6px;
+}
+#navbar #navbar-logo {
+  width: 35px;
+  height: 24px;
+  padding: 28px 23px;
+  flex-shrink: 0;
+}
+#navbar #navbar-person-icon {
+  width: 20px;
+  height: 20px;
+}
+#navbar .down-arrow-icon {
+  width: 12px;
+  height: 20px;
+}
+
 body {
   margin: 0px;
   height: 100vh;
@@ -6,14 +54,16 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
-.feather {
-  width: 24px;
-  height: 24px;
-  stroke: currentColor;
-  stroke-width: 2;
-  stroke-linecap: round;
-  stroke-linejoin: round;
-  fill: none;
+.half-container,
+.toggle-container,
+.input,
+#sign-in-btn,
+.google-sign-in-btn {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+  width: 100%;
+  border-radius: 10px;
 }
 
 .half-container {
@@ -27,12 +77,8 @@ body {
 }
 
 .toggle-container {
-  display: flex;
-  align-items: center;
   background-color: #fce5f1;
   margin-bottom: 10px;
-  width: 100%;
-  border-radius: 10px;
   height: 50px;
   flex-direction: row;
   justify-content: space-evenly;
@@ -44,7 +90,6 @@ body {
 .sign-up-toggle {
   width: 49%;
   padding: 13px 0px;
-  border-radius: 10px;
   color: #7e6d80;
 }
 
@@ -67,18 +112,11 @@ body {
   width: 25rem;
   text-align: center;
   flex-direction: column;
-  flex-wrap: nowrap;
-  justify-content: center;
 }
 
 .input {
-  display: flex;
-  align-items: center;
-  margin-top: 10px;
-  width: 100%;
   height: 60px;
   flex-direction: row;
-  border-radius: 10px;
   box-shadow: 0px 2px 10px 0px rgba(142, 118, 157, 0.22);
 }
 .input-before {
@@ -92,32 +130,19 @@ body {
 }
 
 #sign-in-btn {
-  display: flex;
-  align-items: center;
   margin-top: 20px;
-  width: 100%;
   height: 50px;
   justify-content: center;
-  border-radius: 12px;
   color: white;
   background: var(--gradient, linear-gradient(45deg, #b287ae 0.01%, #df98c3 49.97%, #fda4cf 100%));
   box-shadow: 0px 6px 16px 0px rgba(251, 164, 206, 0.3);
 }
 
 .google-sign-in-btn {
-  display: flex;
-  align-items: center;
-  width: 100%;
   height: 50px;
   justify-content: center;
   color: #7e6d80;
-  border-radius: 12px;
   border: 1px solid #e3e1e3;
-}
-
-.fill {
-  display: flex;
-  overflow: hidden;
 }
 
 .fill img {
@@ -150,7 +175,6 @@ hr.or-google-divider {
   color: #e3e1e3;
   text-align: center;
 }
-
 hr.or-google-divider:after {
   content: "Or";
   display: inline-block;
