--- a/src/public/css/pages/_login.scss
+++ b/src/public/css/pages/_login.scss
@@ -9,14 +9,15 @@ body {
   font-family: $main-font;
 }
 
-.feather {
-  width: 24px;
-  height: 24px;
-  stroke: currentColor;
-  stroke-width: 2;
-  stroke-linecap: round;
-  stroke-linejoin: round;
-  fill: none;
+.half-container,
+.toggle-container,
+.input,
+#sign-in-btn,
+.google-sign-in-btn {
+  @include flex-center;
+  margin-top: 10px;
+  width: 100%;
+  border-radius: $standard-border-radius;
 }
 
 .half-container {
@@ -25,20 +26,17 @@ body {
 }
 
 .active {
-  background-color: $active-color;
+  background-color: $background-color;
   color: $main-font-color !important;
 }
 
 .toggle-container {
-  @include flex-center();
   background-color: #fce5f1;
   margin-bottom: 10px;
-  width: 100%;
-  border-radius: 10px;
   height: 50px;
   flex-direction: row;
   justify-content: space-evenly;
-  font-size: 0.95rem;
+  font-size: $standard-font-size;
   font-weight: 600;
 }
 
@@ -46,7 +44,6 @@ body {
 .sign-up-toggle {
   width: 49%;
   padding: 13px 0px;
-  border-radius: 10px;
   color: $secondary-font-color;
 }
 
@@ -63,22 +60,16 @@ body {
 }
 
 .left-container {
-  @include flex-center();
+  @include flex-center;
   margin: auto;
   width: 25rem;
   text-align: center;
   flex-direction: column;
-  flex-wrap: nowrap;
-  justify-content: center;
 }
 
 .input {
-  @include flex-center();
-  margin-top: 10px;
-  width: 100%;
   height: 60px;
   flex-direction: row;
-  border-radius: 10px;
   box-shadow: $main-shadow;
 
   &-before {
@@ -94,31 +85,21 @@ body {
 }
 
 #sign-in-btn {
-  @include flex-center();
   margin-top: 20px;
-  width: 100%;
   height: 50px;
   justify-content: center;
-  border-radius: 12px;
   color: white;
   background: var(--gradient, linear-gradient(45deg, #b287ae 0.01%, #df98c3 49.97%, #fda4cf 100%));
   box-shadow: $btn-shadow;
 }
 
 .google-sign-in-btn {
-  @include flex-center();
-  width: 100%;
   height: 50px;
   justify-content: center;
   color: $secondary-font-color;
-  border-radius: 12px;
   border: 1px solid #e3e1e3;
 }
 
-.fill {
-  display: flex;
-  overflow: hidden;
-}
 .fill img {
   min-width: 100%;
   min-height: 100%;
@@ -129,7 +110,7 @@ input {
   padding: 0px;
   color: $main-font-color;
   font-family: $main-font;
-  font-size: 0.95rem;
+  font-size: $standard-font-size;
   font-weight: 600;
   width: 100%;
 }
@@ -148,16 +129,16 @@ hr.or-google-divider {
   border-top: 1px solid #e0e0e0;
   color: #e3e1e3;
   text-align: center;
-}
 
-hr.or-google-divider:after {
-  content: 'Or';
-  display: inline-block;
-  position: relative;
-  top: -10px;
-  padding: 0 16px;
-  background: $active-color;
-  color: $secondary-font-color;
+  &:after {
+    content: 'Or';
+    display: inline-block;
+    position: relative;
+    top: -10px;
+    padding: 0 16px;
+    background: $background-color;
+    color: $secondary-font-color;
+  }
 }
 
 #login-input-email,
