--- a/src/public/css/main.scss
+++ b/src/public/css/main.scss
@@ -9,3 +9,27 @@
 
 // Import page-specific styles
 @import 'pages/login';
+
+body {
+  margin: 0px;
+  height: 100vh;
+  color: $main-font-color;
+  font-weight: bold;
+  font-family: $main-font;
+}
+
+//TODO: possibly change to .input, with @extend depending on the page, and move to a /components
+input {
+  border: none;
+  padding: 0px;
+  color: $main-font-color;
+  font-family: $main-font;
+  font-size: $standard-font-size;
+  font-weight: 600;
+  width: 100%;
+}
+
+textarea:focus,
+input:focus {
+  outline: none;
+}
