--- a/src/views/login.html
+++ b/src/views/login.html
@@ -39,7 +39,7 @@
                             <input id="login-input-password" type="password" placeholder="Password" />
                         </div>
                     </div>
-                    <div id="sign-in-btn">Sign In</div>
+                    <div id="sign-in-btn" class="large-button">Sign In</div>
                     <hr class="or-google-divider">
                     </hr>
                     <div class="google-sign-in-btn"><img style="margin-right: 10px;" src="img/google_icon.svg"></i> Sign in with Google</div>
