--- a/src/public/css/partials/_variables.scss
+++ b/src/public/css/partials/_variables.scss
@@ -1,9 +1,10 @@
-// This file is to contains all reused variables throughout the css
-
+// Reused variables throughout the CSS
 $main-font: 'Roboto', sans-serif;
+$script-font: 'Courier New', monospace;
 $main-font-color: #130214;
+$primary-font-color: #926296;
 $secondary-font-color: #7e6d80;
-$navbar-font-color: #926296;
+$button-font-color: #fff;
 $background-color: #fff;
 $main-shadow: 0px 2px 10px 0px rgba(142, 118, 157, 0.22);
 $btn-shadow: 0px 6px 16px 0px rgba(251, 164, 206, 0.3);
@@ -11,3 +12,7 @@ $standard-line-height: normal;
 $standard-letter-spacing: -0.39px;
 $standard-border-radius: 10px;
 $standard-font-size: 0.95rem;
+$light-outline-color: #e3e1e3;
+$gradient-color-start: #b287ae;
+$gradient-color-mid: #df98c3;
+$gradient-color-end: #fda4cf;
