--- a/src/public/css/components/_buttons.scss
+++ b/src/public/css/components/_buttons.scss
@@ -1,31 +1,32 @@
-.shared-button{
+// Buttons
+%shared-button {
+  @include font-style;
+
   justify-content: center;
   color: $button-font-color;
-  font-family: $main-font;
 }
 
 .primary-button {
   @include flex-center;
-  @extend .shared-button;
+  @extend %shared-button;
+
   position: relative;
   z-index: 0;
-  overflow: hidden;
-  padding: 9px 19px;
-  border-radius: 49px;
-  text-align: center;
-  font-size: 12px;
-  font-weight: 600;
-  border-color: transparent;
   gap: 10px;
+  padding: 9px 19px;
+  overflow: hidden;
+  text-align: center;
+  border-color: transparent;
+  border-radius: 49px;
 
   &::before {
-    content: "";
     position: absolute;
+    z-index: -1;
     width: 100%;
     height: 100%;
     background: linear-gradient(89deg, $gradient-color-start 0%, $gradient-color-mid 50%, $gradient-color-end 100%);
     box-shadow: $btn-shadow;
-    z-index: -1;
+    content: '';
   }
 
   &:hover::before {
@@ -34,19 +35,21 @@
 }
 
 .large-button {
-  @extend .shared-button;
-  margin-top: 20px;
+  @extend %shared-button;
+
   height: 50px;
+  margin-top: 20px;
   background: linear-gradient(45deg, $gradient-color-start 0.01%, $gradient-color-mid 49.97%, $gradient-color-end 100%);
   box-shadow: $btn-shadow;
-  
+
   &:hover {
     background: $gradient-color-start;
   }
 }
 
 .google-sign-in-btn {
-  @extend .shared-button;
+  @extend %shared-button;
+
   height: 50px;
   color: $secondary-font-color;
   border: 1px solid $light-outline-color;
@@ -56,6 +59,6 @@
   }
 
   &:hover {
-    border-color: pink;
+    border-color: $hover-color;
   }
 }
