--- a/src/public/css/components/_navbar.scss
+++ b/src/public/css/components/_navbar.scss
@@ -1,30 +1,30 @@
 // Navbar styles
 #navbar {
-  @include flex-center;
-  justify-content: space-between;
+  @include flex-center(space-between);
+
   width: 1600px;
   height: 70px;
   background: $background-color;
 
-  .navbar-item-group {
+  %navbar-item-group {
     @include flex-center;
+    @include font-style;
+
     gap: 20px;
     color: $primary-font-color;
-    font-size: 13px;
-    font-family: $main-font;
     font-style: normal;
-    font-weight: 600;
     line-height: $standard-line-height;
     letter-spacing: $standard-letter-spacing;
   }
 
   .navbar-link {
-    @extend .navbar-item-group;
+    @extend %navbar-item-group;
+
     text-decoration: none;
     cursor: pointer;
 
     &:hover {
-      color: pink; //todo
+      color: $hover-color;
     }
   }
 
@@ -32,16 +32,21 @@
     color: $main-font-color;
   }
 
+  .navbar-item-group-left {
+    @extend %navbar-item-group;
+  }
+
   .navbar-item-group-right {
-    @extend .navbar-item-group;
+    @extend %navbar-item-group;
+
     gap: 6px;
   }
 
   #navbar-logo {
+    flex-shrink: 0;
     width: 35px;
     height: 24px;
     padding: 28px 23px;
-    flex-shrink: 0;
   }
 
   #navbar-person-icon {
