--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -6,15 +6,16 @@
   height: 70px;
   background: #fff;
 }
-#navbar .navbar-item-group, #navbar .navbar-item-group-right, #navbar .navbar-link {
+#navbar .navbar-item-group-right, #navbar .navbar-item-group-left, #navbar .navbar-link {
   display: flex;
   align-items: center;
+  justify-content: center;
+  font-weight: 600;
+  font-size: 0.95rem;
+  font-family: "Roboto", sans-serif;
   gap: 20px;
   color: #926296;
-  font-size: 13px;
-  font-family: "Roboto", sans-serif;
   font-style: normal;
-  font-weight: 600;
   line-height: normal;
   letter-spacing: -0.39px;
 }
@@ -23,7 +24,7 @@
   cursor: pointer;
 }
 #navbar .navbar-link:hover {
-  color: pink;
+  color: #f5bdd8;
 }
 #navbar .navbar-link.active {
   color: #130214;
@@ -32,10 +33,10 @@
   gap: 6px;
 }
 #navbar #navbar-logo {
+  flex-shrink: 0;
   width: 35px;
   height: 24px;
   padding: 28px 23px;
-  flex-shrink: 0;
 }
 #navbar #navbar-person-icon {
   width: 20px;
@@ -46,44 +47,45 @@
   height: 20px;
 }
 
-.shared-button, .google-sign-in-btn, .large-button, .primary-button {
+.google-sign-in-btn, .large-button, .primary-button {
+  font-weight: 600;
+  font-size: 0.95rem;
+  font-family: "Roboto", sans-serif;
   justify-content: center;
   color: #fff;
-  font-family: "Roboto", sans-serif;
 }
 
 .primary-button {
   display: flex;
   align-items: center;
+  justify-content: center;
   position: relative;
   z-index: 0;
-  overflow: hidden;
-  padding: 9px 19px;
-  border-radius: 49px;
-  text-align: center;
-  font-size: 12px;
-  font-weight: 600;
-  border-color: transparent;
   gap: 10px;
+  padding: 9px 19px;
+  overflow: hidden;
+  text-align: center;
+  border-color: transparent;
+  border-radius: 49px;
 }
 .primary-button::before {
-  content: "";
   position: absolute;
+  z-index: -1;
   width: 100%;
   height: 100%;
   background: linear-gradient(89deg, #b287ae 0%, #df98c3 50%, #fda4cf 100%);
-  box-shadow: 0px 6px 16px 0px rgba(251, 164, 206, 0.3);
-  z-index: -1;
+  box-shadow: 0 6px 16px 0 rgba(251, 164, 206, 0.3);
+  content: "";
 }
 .primary-button:hover::before {
   background: #b287ae;
 }
 
 .large-button {
-  margin-top: 20px;
   height: 50px;
+  margin-top: 20px;
   background: linear-gradient(45deg, #b287ae 0.01%, #df98c3 49.97%, #fda4cf 100%);
-  box-shadow: 0px 6px 16px 0px rgba(251, 164, 206, 0.3);
+  box-shadow: 0 6px 16px 0 rgba(251, 164, 206, 0.3);
 }
 .large-button:hover {
   background: #b287ae;
@@ -98,30 +100,30 @@
   margin-right: 10px;
 }
 .google-sign-in-btn:hover {
-  border-color: pink;
+  border-color: #f5bdd8;
 }
 
 .login-page-wrapper {
-  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 100vh;
   overflow: hidden;
 }
 
 .half-container {
-  text-align: center;
+  box-sizing: border-box;
   width: 50%;
   margin: 0 5px;
   padding: 0 5px;
-  box-sizing: border-box;
+  text-align: center;
 }
 .half-container.fill {
   height: 98%;
 }
 .half-container.fill img {
-  height: 100%;
   width: 100%;
+  height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 50px 0;
@@ -129,10 +131,11 @@
 .half-container .left-container {
   display: flex;
   align-items: center;
-  margin: auto;
-  width: 25rem;
-  text-align: center;
+  justify-content: center;
   flex-direction: column;
+  width: 25rem;
+  margin: auto;
+  text-align: center;
 }
 
 .toggle-container,
@@ -141,24 +144,28 @@
 .google-sign-in-btn {
   display: flex;
   align-items: center;
-  margin-top: 10px;
+  justify-content: center;
   width: 100%;
+  margin-top: 10px;
   border-radius: 10px;
 }
 
 .active {
-  background-color: #fff;
   color: #130214 !important;
+  background-color: #fff;
 }
 
 .toggle-container {
-  background-color: #fce5f1;
-  margin-bottom: 10px;
-  height: 50px;
-  flex-direction: row;
+  display: flex;
+  align-items: center;
   justify-content: space-evenly;
-  font-size: 0.95rem;
   font-weight: 600;
+  font-size: 0.95rem;
+  font-family: "Roboto", sans-serif;
+  flex-direction: row;
+  height: 50px;
+  margin-bottom: 10px;
+  background-color: #fce5f1;
 }
 
 .sign-in-toggle,
@@ -173,54 +180,50 @@
 }
 
 .login-logo {
-  top: 10%;
   position: absolute;
+  top: 10%;
   width: 10rem;
 }
 
 .welcome-back {
-  font-size: 3rem;
   font-weight: 300;
+  font-size: 3rem;
+  font-family: "Roboto", sans-serif;
   margin-bottom: 20px;
 }
 
 .input {
-  height: 60px;
   flex-direction: row;
-  box-shadow: 0px 2px 10px 0px rgba(142, 118, 157, 0.22);
+  height: 60px;
+  box-shadow: 0 2px 10px 0 rgba(142, 118, 157, 0.22);
 }
 .input-before {
   padding: 0 10px;
 }
 .input-after {
-  text-align: left;
+  width: 100%;
   height: 100%;
   padding-right: 15px;
+  text-align: left;
+}
+
+.or-google-divider {
   width: 100%;
-}
-
-.fill img {
-  min-width: 100%;
-  min-height: 100%;
-}
-
-hr.or-google-divider {
   margin-top: 30px;
-  width: 100%;
   padding: 0;
   overflow: visible;
-  border: none;
-  border-top: 1px solid #e3e1e3;
   text-align: center;
+  border: 0;
+  border-top: 1px solid #e3e1e3;
 }
-hr.or-google-divider:after {
-  content: "Or";
-  display: inline-block;
+.or-google-divider::after {
   position: relative;
   top: -10px;
+  display: inline-block;
   padding: 0 16px;
-  background: #fff;
   color: #7e6d80;
+  background: #fff;
+  content: "Or";
 }
 
 #login-input-email,
@@ -231,37 +234,37 @@ hr.or-google-divider:after {
 .editor {
   display: flex;
   width: 100%;
-  max-height: 100vh;
   height: 79vh;
+  max-height: 100vh;
 }
 
 .script {
+  flex: 1;
+  box-sizing: border-box;
   width: 100%;
   height: 100%;
-  padding-left: 1.875rem;
-  border: none;
-  resize: none;
-  box-sizing: border-box;
-  background: linear-gradient(180deg, #fce5f1 0%, rgba(254, 221, 225, 0.8) 100%), #fce5f1;
-  font-family: "Courier New", monospace;
-  overflow-y: auto;
-  scroll-behavior: smooth;
-  flex: 1;
   max-height: 79vh;
+  padding-left: 1.875rem;
+  overflow-y: auto;
+  font-family: "Courier New", monospace;
+  background: linear-gradient(180deg, #fce5f1 0%, rgba(254, 221, 225, 0.8) 100%), #fce5f1;
+  border: 0;
+  resize: none;
+  scroll-behavior: smooth;
 }
 
 #line-numbers {
-  padding: 0 0.4375rem;
-  text-align: right;
-  border-right: 1px solid #ccc;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  color: #c2a6c5;
-  background: rgba(194, 166, 197, 0.2);
-  font-family: "Courier New", monospace;
+  padding: 0 0.4375rem;
   overflow: hidden;
+  color: #c2a6c5;
+  font-family: "Courier New", monospace;
   white-space: pre;
+  text-align: right;
+  background: rgba(194, 166, 197, 0.2);
+  border-right: 1px solid #f1d7e6;
 }
 
 .content-wrapper {
@@ -273,44 +276,45 @@ hr.or-google-divider:after {
 
 .content-left,
 .content-right {
-  background: linear-gradient(0deg, #fce5f1 0%, #fce5f1 100%), linear-gradient(180deg, #fce5f1 0%, rgba(254, 221, 225, 0.8) 100%);
-  flex: 1;
   display: flex;
+  flex: 1;
   flex-direction: column;
   max-height: 100vh;
+  background: linear-gradient(0deg, #fce5f1 0%, #fce5f1 100%), linear-gradient(180deg, #fce5f1 0%, rgba(254, 221, 225, 0.8) 100%);
 }
 
 .analyze-header {
-  padding: 23px 15px 19px;
-  border-bottom: 0.5px #f1d7e6 solid;
-  justify-content: space-between;
-  align-items: center;
   display: flex;
-  color: #926296;
+  align-items: center;
+  justify-content: space-between;
+  font-weight: 400;
   font-size: 1.25rem;
   font-family: "Roboto", sans-serif;
+  padding: 23px 15px 19px;
+  color: #926296;
   font-style: normal;
-  font-weight: 400;
   line-height: normal;
   letter-spacing: -0.0375rem;
+  border-bottom: 0.5px #f1d7e6 solid;
 }
 
 body {
-  margin: 0;
-  height: 100vh;
-  color: #130214;
   font-weight: bold;
+  font-size: 0.95rem;
   font-family: "Roboto", sans-serif;
+  height: 100vh;
+  margin: 0;
+  color: #130214;
 }
 
 input {
-  border: none;
+  font-weight: 600;
+  font-size: 0.95rem;
+  font-family: "Roboto", sans-serif;
+  width: 100%;
   padding: 0;
   color: #130214;
-  font-family: "Roboto", sans-serif;
-  font-size: 0.95rem;
-  font-weight: 600;
-  width: 100%;
+  border: 0;
 }
 
 textarea:focus,
