--- a/src/public/css/pages/_analyze.scss
+++ b/src/public/css/pages/_analyze.scss
@@ -2,37 +2,37 @@
 .editor {
   display: flex;
   width: 100%;
-  max-height: 100vh;
   height: 79vh;
+  max-height: 100vh;
 }
 
 .script {
+  flex: 1;
+  box-sizing: border-box;
   width: 100%;
   height: 100%;
-  padding-left: 1.875rem;
-  border: none;
-  resize: none;
-  box-sizing: border-box;
-  background: linear-gradient(180deg, #fce5f1 0%, rgba(254, 221, 225, 0.8) 100%), #fce5f1;
-  font-family: $script-font;
-  overflow-y: auto;
-  scroll-behavior: smooth;
-  flex: 1;
   max-height: 79vh;
+  padding-left: 1.875rem;
+  overflow-y: auto;
+  font-family: $script-font;
+  background: linear-gradient(180deg, $primary-background-color 0%, rgb(254 221 225 / 80%) 100%), $primary-background-color;
+  border: 0;
+  resize: none;
+  scroll-behavior: smooth;
 }
 
 #line-numbers {
-  padding: 0 0.4375rem;
-  text-align: right;
-  border-right: 1px solid #ccc;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  color: #c2a6c5;
-  background: rgba(194, 166, 197, 0.2);
-  font-family: $script-font;
+  padding: 0 0.4375rem;
   overflow: hidden;
+  color: #c2a6c5;
+  font-family: $script-font;
   white-space: pre;
+  text-align: right;
+  background: rgb(194 166 197 / 20%);
+  border-right: 1px solid $primary-border-color;
 }
 
 .content-wrapper {
@@ -44,24 +44,22 @@
 
 .content-left,
 .content-right {
-  background: linear-gradient(0deg, #fce5f1 0%, #fce5f1 100%), linear-gradient(180deg, #fce5f1 0%, rgba(254, 221, 225, 0.8) 100%);
+  display: flex;
   flex: 1;
-  display: flex; 
-  flex-direction: column; 
+  flex-direction: column;
   max-height: 100vh;
+  background: linear-gradient(0deg, $primary-background-color 0%, $primary-background-color 100%),
+    linear-gradient(180deg, $primary-background-color 0%, rgb(254 221 225 / 80%) 100%);
 }
 
 .analyze-header {
+  @include flex-center(space-between);
+  @include font-style($weight: 400, $size: 1.25rem);
+
   padding: 23px 15px 19px;
-  border-bottom: 0.5px #f1d7e6 solid;
-  justify-content: space-between;
-  align-items: center;
-  display: flex;
   color: $primary-font-color;
-  font-size: 1.25rem;
-  font-family: $main-font;
   font-style: normal;
-  font-weight: 400;
   line-height: normal;
   letter-spacing: -0.0375rem;
+  border-bottom: 0.5px $primary-border-color solid;
 }
