--- a/src/views/analyze.html
+++ b/src/views/analyze.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div id="navbar">
-      <div class="navbar-item-group">
+      <div class="navbar-item-group-left">
         <a href="home.html"><img id="navbar-logo" src="img/navbar_logo.svg" /></a>
         <a class="navbar-link" href="home.html">Home</a>
         <a class="navbar-link" href="analyze.html">Analyze</a>
@@ -14,7 +14,7 @@
         <a class="navbar-link" href="admin.html">Admin</a>
         <a class="navbar-link" href="help.html">Help</a>
       </div>
-      <div class="navbar-item-group navbar-item-group-right">
+      <div class="navbar-item-group-right">
         <img id="navbar-user-icon" src="img/person.svg" />
         <div id="navbar-user">John Doe</div>
         <img class="down-arrow-icon" src="img/arrow_drop_down.svg" />
