change navbar links

--- a/src/views/analyze.html
+++ b/src/views/analyze.html
@@ -8,11 +8,11 @@
     <div id="navbar">
       <div class="navbar-item-group-left">
         <a href="home.html"><img id="navbar-logo" src="img/navbar_logo.svg" /></a>
-        <a class="navbar-link" href="home.html">Home</a>
-        <a class="navbar-link" href="analyze.html">Analyze</a>
-        <a class="navbar-link" href="history.html">History</a>
-        <a class="navbar-link" href="admin.html">Admin</a>
-        <a class="navbar-link" href="help.html">Help</a>
+        <a class="navbar-link" href="home">Home</a>
+        <a class="navbar-link" href="analyze">Analyze</a>
+        <a class="navbar-link" href="history">History</a>
+        <a class="navbar-link" href="admin">Admin</a>
+        <a class="navbar-link" href="help">Help</a>
       </div>
       <div class="navbar-item-group-right">
         <img id="navbar-user-icon" src="img/person.svg" />
