prepend ```{r} to all scripts

--- a/src/views/analyze.html
+++ b/src/views/analyze.html
@@ -24,7 +24,8 @@
     <div class="content-wrapper">
     <div class="content-left">
       <div class="analyze-header"> R Script
-        <button id="run-script-button" class="primary-button">Run script</button>
+        <button id="upload-script-button" class="primary-button">Upload Script</button>
+        <button id="run-script-button" class="primary-button">Run Script</button>
       </div>
       <div class="editor">
         <div id="line-numbers"></div>
@@ -34,7 +35,7 @@
     </div>
     <div class="content-right">
       <div class="analyze-header"> Results
-        <button id="download-button" class="primary-button">Download pdf</button>
+        <button id="download-button" class="primary-button">Download .HTML</button>
       </div>
       <div id="results" class="script"></div>
     </div>
