display script results on page, ignore .css.map files

--- a/src/views/analyze.html
+++ b/src/views/analyze.html
@@ -37,7 +37,7 @@
       <div class="analyze-header"> Results
         <button id="download-button" class="primary-button">Download .HTML</button>
       </div>
-      <div id="results" class="script"></div>
+      <div id="results" class="script"><iframe id="results-iframe"></iframe></div>
     </div>
   </div>
   </body>
