--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -253,6 +253,17 @@
   scroll-behavior: smooth;
 }
 
+#results {
+  padding-left: 0px;
+  overflow: hidden;
+}
+
+#results-iframe {
+  width: 100%;
+  height: 100%;
+  border: none;
+}
+
 #line-numbers {
   display: flex;
   flex-direction: column;
