disable spellcheck and resizing on script textarea

--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -253,6 +253,10 @@
   scroll-behavior: smooth;
 }
 
+#script-textbox {
+  resize: none;
+}
+
 #results {
   padding-left: 0px;
   overflow: hidden;
