--- a/src/views/analyze.html
+++ b/src/views/analyze.html
@@ -28,7 +28,7 @@
       </div>
       <div class="editor">
         <div id="line-numbers"></div>
-        <textarea id="script-textbox" class="script"></textarea>
+        <textarea id="script-textbox" class="script" spellcheck="false"></textarea>
       </div>
 
     </div>
