--- a/src/public/css/partials/_variables.scss
+++ b/src/public/css/partials/_variables.scss
@@ -23,3 +23,8 @@ $hover-color: #f5bdd8;
 $scrollbar-width: 0.625rem;
 $scrollbar-border-radius: 2.5rem;
 $scrollbar-color: #f0c2d8;
+$tab-padding: 0.875rem;
+$tab-gap: 0.25rem;
+$tab-border: 2px;
+$content-padding: 0.625rem;
+$navbar-height: 4.375rem;
