--- a/src/public/css/pages/_analyze.scss
+++ b/src/public/css/pages/_analyze.scss
@@ -2,8 +2,7 @@
 .editor {
   display: flex;
   width: 100%;
-  height: 80vh;
-  max-height: 100vh;
+  height: calc(100% - #{$navbar-height});
 }
 
 .script {
@@ -11,7 +10,6 @@
   box-sizing: border-box;
   width: 100%;
   height: 100%;
-  max-height: 80vh;
   padding-left: 1.875rem;
   overflow-y: auto;
   font-family: $script-font;
@@ -71,8 +69,10 @@
 .content-wrapper {
   display: flex;
   flex: 1;
-  gap: 0.25rem;
-  padding: 0.5rem;
+  gap: $tab-gap;
+  height: calc(100% - #{$navbar-height} - #{$content-padding});
+  margin-right: $content-padding;
+  margin-left: $content-padding;
 }
 
 .content-left,
@@ -80,7 +80,6 @@
   display: flex;
   flex: 1;
   flex-direction: column;
-  max-height: 100vh;
   background: linear-gradient(0deg, $primary-background-color 0%, $primary-background-color 100%),
     linear-gradient(180deg, $primary-background-color 0%, rgb(254 221 225 / 80%) 100%);
 }
@@ -89,10 +88,10 @@
   @include flex-center(space-between);
   @include font-style($weight: 400, $size: 1.25rem);
 
-  padding: 15px 15px;
+  padding: 0.9375rem $content-padding;
   color: $primary-font-color;
   font-style: normal;
   line-height: normal;
   letter-spacing: -0.0375rem;
-  border-bottom: 0.5px $primary-border-color solid;
+  border-bottom: 0.0313rem $primary-border-color solid;
 }
