admin page init

--- a/src/public/css/main.scss
+++ b/src/public/css/main.scss
@@ -9,6 +9,7 @@
 // Import page-specific styles
 @import 'pages/login';
 @import 'pages/analyze';
+@import 'pages/admin';
 
 // This file should contain all global CSS
 
