create scrollbar and text components

--- a/src/public/css/main.scss
+++ b/src/public/css/main.scss
@@ -5,6 +5,8 @@
 // Import components
 @import 'components/navbar';
 @import 'components/buttons';
+@import 'components/scrollbar';
+@import 'components/text';
 
 // Import page-specific styles
 @import 'pages/login';
