--- a/src/public/css/main.scss
+++ b/src/public/css/main.scss
@@ -1,3 +1,6 @@
+// Import Google font
+@import 'https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap';
+
 // Import partials
 @import 'partials/mixin';
 @import 'partials/variables';
