--- a/src/public/css/partials/_variables.scss
+++ b/src/public/css/partials/_variables.scss
@@ -1,5 +1,5 @@
 // Reused variables throughout the CSS
-$main-font: 'Roboto', sans-serif;
+$main-font: 'Inter', sans-serif;
 $script-font: 'Courier New', monospace;
 $main-font-color: #130214;
 $primary-font-color: #926296;
