--- a/src/public/css/partials/_variables.scss
+++ b/src/public/css/partials/_variables.scss
@@ -22,8 +22,9 @@ $gradient-color-end: #fda4cf;
 $hover-color: #f5bdd8;
 $scrollbar-border-radius: 2.5rem;
 $scrollbar-color: #f0c2d8;
-$tab-padding: 0.875rem;
 $tab-gap: 0.25rem;
 $tab-border: 2px;
+$tab-height: 3rem;
+$tab-content-padding: 1.25rem;
 $content-padding: 0.625rem;
 $navbar-height: 4.375rem;
