--- a/src/views/analyze.html
+++ b/src/views/analyze.html
@@ -9,7 +9,7 @@
       <div class="navbar-item-group-left">
         <a href="home.html"><img id="navbar-logo" src="img/navbar_logo.svg" /></a>
         <a class="navbar-link" href="home">Home</a>
-        <a class="navbar-link" href="analyze">Analyze</a>
+        <a class="navbar-link active" href="analyze">Analyze</a>
         <a class="navbar-link" href="history">History</a>
         <a class="navbar-link" href="admin">Admin</a>
         <a class="navbar-link" href="help">Help</a>
