--- a/src/public/css/pages/_admin.scss
+++ b/src/public/css/pages/_admin.scss
@@ -1,25 +1,40 @@
-// Admin page-specific styles
-#admin-content {
+// Analyze page-specific styles
+$admin-content-selector: "#admin-content";
+$tab-content-selector: "#{$admin-content-selector} .tab-content";
+$tab-pane-selector: "#{$tab-content-selector} .tab-pane";
+$user-application-selector: "#{$tab-pane-selector} .user-application";
+
+#{$admin-content-selector} {
+  display: flex;
+  flex-direction: column;
   height: calc(100% - #{$navbar-height} - #{$content-padding});
-  margin-right: $content-padding;
-  margin-left: $content-padding;
+  min-height: 0;
+  margin: 0 $content-padding;
   background: linear-gradient(180deg, $primary-background-color 0%, rgba($primary-background-color, 0.8) 100%), $primary-background-color;
 
   .tabs {
     @include flex-center(flex-start);
 
+    position: relative;
     gap: $tab-gap;
-    padding: 0.9375rem 0 0 $content-padding;
-    border-bottom: $tab-border solid $button-font-color;
+    padding: $content-padding $content-padding 0;
+
+    &::after {
+      position: absolute;
+      right: $content-padding;
+      bottom: 0;
+      left: $content-padding;
+      border-bottom: $tab-border solid $button-font-color;
+      content: '';
+    }
 
     .tab {
       @include font-style;
+      @include tab-style;
 
-      align-items: center;
-      padding: 0.625rem 1.25rem;
-      color: $secondary-font-color;
-      border: $tab-border solid transparent;
-      border-radius: 0.75rem 0.75rem 0 0;
+      &:hover {
+        cursor: pointer;
+      }
 
       &.active {
         color: $main-font-color;
@@ -30,14 +45,113 @@
   }
 
   .tab-content {
-    padding: $tab-padding;
+    @extend %scrollbar;
 
-    .tab-pane {
-      display: none;
-
-      &.active {
-        display: block;
-      }
-    }
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    overflow-y: auto;
   }
+}
+
+#{$tab-pane-selector} {
+  display: none;
+  flex: 1;
+  min-height: 0;
+  overflow-y: auto;
+
+  &.active {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+#{$user-application-selector} {
+  @include flex-center(space-between);
+
+  height: 4.8125rem;
+  margin: $content-padding;
+  background: rgb(255 255 255 / 60%);
+  border-radius: 0.75rem;
+
+  &.active {
+    background-color: $background-color; 
+    box-shadow: 0 4px 10px 0 rgb(169 82 113 / 12%);
+  }
+
+  &:hover {
+    background-color: lighten($primary-background-color, 10%);
+  }
+
+  .user-info {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 1.25rem;
+  }
+
+  .arrow {
+    width: 1.5rem;
+    height: 1.5rem;
+    margin-right: 1.25rem;
+    background: url('../img/arrow_right_alt.svg') no-repeat center;
+    background-size: contain;
+  }
+}
+
+#{$tab-pane-selector} .admin-header {
+  @extend %header;
+
+  flex: none;
+}
+
+#{$tab-pane-selector} .user-section {
+  display: flex;
+  flex: 1;
+  flex-direction: row;
+  overflow-y: auto;
+}
+
+#{$tab-pane-selector} .user-list {
+  flex: 0.8;
+  height: 100%;
+  min-height: 0;
+  @extend %scrollbar;
+}
+
+#{$tab-pane-selector} .user-content {
+  flex: 3.5;
+  min-height: 0;
+  margin: 0 $content-padding $content-padding $content-padding;
+  background: $background-color;
+  border-radius: 0.75rem;
+  @extend %scrollbar;
+}
+
+.user-actions {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#no-content-selected {
+  display: flex;
+  flex: 3.5; 
+  align-items: center;
+  justify-content: center;
+  min-height: 0;
+  margin: 0 $content-padding $content-padding $content-padding;
+  overflow-y: auto; 
+  text-align: center;
+  background-color: $primary-background-color;
+  border: 2px solid $background-color;
+  border-radius: 0.75rem;
+  
+  &.hide-content {
+    display:none;
+  }
+}
+
+.hide-content {
+  display: none;
 }
