--- a/src/views/admin.html
+++ b/src/views/admin.html
@@ -39,16 +39,19 @@
                     <div class="user-content">
                         <div class="content-header">
                             <div class="large-header"><!-- set name in js--></div>
-                            <button id="approve-button">Approve</button>
-                            <button id="decline-button">Decline</button>
+                            <div class="action-buttons">
+                                <button id="approve-button">Approve</button>
+                                <button id="decline-button">Decline</button>
+                            </div>
                         </div>
-                        <hr />
+                        <hr>
                         <div class="smaller-header">Email</div>
                         <a id="email-link"></a>
                         <!-- set email in js-->
+                        <div class="spacing"></div>
                         <div class="smaller-header">Application message</div>
                         <p id="application-message"><!-- set application mesage in js --></p>
-                        
+
                     </div>
                     <div id="no-content-selected" class="large-thin-header show-content">No user selected</div>
                 </div>
