--- a/src/public/css/pages/_admin.scss
+++ b/src/public/css/pages/_admin.scss
@@ -1,10 +1,6 @@
-// Analyze page-specific styles
-$admin-content-selector: "#admin-content";
-$tab-content-selector: "#{$admin-content-selector} .tab-content";
-$tab-pane-selector: "#{$tab-content-selector} .tab-pane";
-$user-application-selector: "#{$tab-pane-selector} .user-application";
-
-#{$admin-content-selector} {
+// Admin Content
+// TODO: seperate tabs, user content, user application, to be a components
+#admin-content {
   display: flex;
   flex-direction: column;
   height: calc(100% - #{$navbar-height} - #{$content-padding});
@@ -12,49 +8,51 @@ $user-application-selector: "#{$tab-pane-selector} .user-application";
   margin: 0 $content-padding;
   background: linear-gradient(180deg, $primary-background-color 0%, rgba($primary-background-color, 0.8) 100%), $primary-background-color;
 
-  .tabs {
+}
+
+// Tabs Styles
+.tabs {
     @include flex-center(flex-start);
 
-    position: relative;
-    gap: $tab-gap;
-    padding: $content-padding $content-padding 0;
+  position: relative;
+  gap: $tab-gap;
+  padding: $content-padding $content-padding 0;
 
-    &::after {
-      position: absolute;
-      right: $content-padding;
-      bottom: 0;
-      left: $content-padding;
-      border-bottom: $tab-border solid $button-font-color;
-      content: '';
-    }
-
-    .tab {
-      @include font-style;
-      @include tab-style;
-
-      &:hover {
-        cursor: pointer;
-      }
-
-      &.active {
-        color: $main-font-color;
-        background: $background-color;
-        border-color: $button-font-color;
-      }
-    }
-  }
-
-  .tab-content {
-    @extend %scrollbar;
-
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
-    overflow-y: auto;
+  &::after {
+    position: absolute;
+    right: $content-padding;
+    bottom: 0;
+    left: $content-padding;
+    border-bottom: $tab-border solid $button-font-color;
+    content: '';
   }
 }
 
-#{$tab-pane-selector} {
+#admin-content .tab {
+  @include tab-style;
+
+  &:hover {
+    cursor: pointer;
+  }
+
+  &.active {
+    color: $main-font-color;
+    background: $background-color;
+    border-color: $button-font-color;
+  }
+}
+
+// Tab Content
+#admin-content .tab-content {
+  @extend %scrollbar;
+
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  overflow-y: auto;
+}
+
+#admin-content .tab-pane {
   display: none;
   flex: 1;
   min-height: 0;
@@ -66,7 +64,7 @@ $user-application-selector: "#{$tab-pane-selector} .user-application";
   }
 }
 
-#{$user-application-selector} {
+#admin-content .user-application {
   @include flex-center(space-between);
 
   height: 4.8125rem;
@@ -75,7 +73,7 @@ $user-application-selector: "#{$tab-pane-selector} .user-application";
   border-radius: 0.75rem;
 
   &.active {
-    background-color: $background-color; 
+    background-color: $background-color;
     box-shadow: 0 4px 10px 0 rgb(169 82 113 / 12%);
   }
 
@@ -99,56 +97,74 @@ $user-application-selector: "#{$tab-pane-selector} .user-application";
   }
 }
 
-#{$tab-pane-selector} .admin-header {
+#admin-content .admin-header {
   @extend %header;
 
   flex: none;
 }
 
-#{$tab-pane-selector} .user-section {
+// User Section
+#admin-content .user-section {
   display: flex;
   flex: 1;
-  flex-direction: row;
-  overflow-y: auto;
+  flex-direction: row; 
+  height: 100%;
+  overflow: hidden;
 }
 
-#{$tab-pane-selector} .user-list {
+#admin-content .user-list {
+  @extend %scrollbar;
+
   flex: 0.8;
   height: 100%;
   min-height: 0;
-  @extend %scrollbar;
+  overflow-y: auto;
 }
 
-#{$tab-pane-selector} .user-content {
-  flex: 3.5;
-  min-height: 0;
-  margin: 0 $content-padding $content-padding $content-padding;
-  background: $background-color;
-  border-radius: 0.75rem;
-  @extend %scrollbar;
-}
-
-.user-actions {
+// User Content
+#admin-content .content-header {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: $content-padding;
+}
+
+#admin-content .user-content {
+  @extend %scrollbar;
+
+  flex: 3.5;
+  min-height: 0;
+  margin: 0 $content-padding $content-padding $content-padding;
+  padding: $content-outline-padding;
+  overflow-y: auto;
+  background: $background-color;
+  border-radius: 0.75rem;
+}
+
+#admin-content .action-buttons {
+  display: flex;
+  gap: 10px;
+}
+
+#email-link {
+  color: $primary-font-color;
 }
 
 #no-content-selected {
   display: flex;
-  flex: 3.5; 
+  flex: 3.5;
   align-items: center;
   justify-content: center;
   min-height: 0;
   margin: 0 $content-padding $content-padding $content-padding;
-  overflow-y: auto; 
+  overflow-y: auto;
   text-align: center;
   background-color: $primary-background-color;
   border: 2px solid $background-color;
   border-radius: 0.75rem;
-  
+
   &.hide-content {
-    display:none;
+    display: none;
   }
 }
 
