--- a/src/views/admin.html
+++ b/src/views/admin.html
@@ -51,7 +51,10 @@
                         <div class="spacing"></div>
                         <div class="smaller-header">Application message</div>
                         <p id="application-message"><!-- set application mesage in js --></p>
-
+                        <div class="image-container">
+                            <img id="user-id-image" src="" /><!-- set image in js -->
+                            <button class="unblur-button">Show ID Photo</button>
+                        </div>                        
                     </div>
                     <div id="no-content-selected" class="large-thin-header show-content">No user selected</div>
                 </div>
