ejs init + admin transfer to ejs

--- a/src/public/css/main.scss
+++ b/src/public/css/main.scss
@@ -17,6 +17,7 @@
 @import 'pages/admin';
 
 // This file should contain all global CSS
+// lint: npx stylelint "src/**/*.scss" --fix
 
 body {
   @include font-style(bold);
