--- a/src/public/css/main.scss
+++ b/src/public/css/main.scss
@@ -60,3 +60,9 @@ p {
 .hide-content {
   display: none !important;
 }
+
+.flex-container {
+  display: flex;
+  gap: 1rem;
+  margin-bottom: $content-gap;
+}
