--- a/src/public/css/partials/_variables.scss
+++ b/src/public/css/partials/_variables.scss
@@ -60,6 +60,7 @@ $tab-content-padding: 1.25rem;
 // Content
 $content-padding: 0.625rem;
 $content-outline-padding: 1.25rem;
+$content-gap: 2.5rem;
 $spacing: 1.5rem;
 
 // Navbar
