--- a/src/public/css/components/_buttons.scss
+++ b/src/public/css/components/_buttons.scss
@@ -61,11 +61,11 @@
   }
 }
 
-#approve-button {
+.approve-button {
   @include svg-icon-button($button-approve-color, '../img/check_circle.svg', $hover-color: darken($button-approve-color, 10%));
 }
 
-#decline-button {
+.decline-button {
   @include svg-icon-button($button-decline-color, '../img/cancel.svg', $hover-color: darken($button-decline-color, 10%));
 }
 
