--- a/src/public/css/pages/_admin.scss
+++ b/src/public/css/pages/_admin.scss
@@ -52,18 +52,19 @@
 }
 
 #admin-content .tab-pane {
-  display: none;
-  flex: 1;
-  min-height: 0;
-  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  height: 0;
+  overflow: hidden;
+  visibility: hidden;
 
   &.active {
-    display: flex;
-    flex-direction: column;
+    height: 100%;
+    visibility: visible;
   }
 }
 
-#admin-content .user-application {
+.user-application, .package-request {
   @include flex-center(space-between);
 
   height: 4.8125rem;
@@ -80,7 +81,7 @@
     background-color: lighten($primary-background-color, 10%);
   }
 
-  .user-info {
+  .user-info,  .package-info{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -103,15 +104,14 @@
 }
 
 // User Section
-#admin-content .user-section {
+#admin-content .item-section {
   display: flex;
-  flex: 1;
   flex-direction: row;
-  height: 100%;
+  flex-grow: 1;
   overflow: hidden;
 }
 
-#admin-content .user-list {
+#admin-content .item-list {
   @extend %scrollbar;
 
   flex: 0.8;
@@ -125,10 +125,10 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: $content-padding;
+  padding: $content-padding 0;
 }
 
-#admin-content .user-content {
+.item-content {
   @extend %scrollbar;
 
   flex: 3.5;
@@ -146,11 +146,7 @@
   gap: 10px;
 }
 
-#email-link {
-  color: $primary-font-color;
-}
-
-#no-content-selected {
+#package-no-content-selected, #user-no-content-selected  {
   display: flex;
   flex: 3.5;
   align-items: center;
