admin page ejs changes

--- a/src/views/admin.ejs
+++ b/src/views/admin.ejs
@@ -11,8 +11,8 @@
 
   <div id="admin-content">
     <div class="tabs">
-      <div class="tab" id="tab-user-application">User Applications</div>
-      <div class="tab" id="tab-package-request">Package Requests</div>
+      <div class="tab" id="tab-user-application" data-tab="user">User Applications</div>
+      <div class="tab" id="tab-package-request" data-tab="package">Package Requests</div>
       <div class="tab" id="tab-user-management">User Management</div>
     </div>
     <div class="tab-content">
@@ -23,8 +23,8 @@
   </div>
 
   <script src="js/admin-script.js"></script>
-  <script src="js/admin/user-application.js"></script>
-  <script src="js/admin/package-request.js"></script>
+  <script type="module" src="js/admin/user-application.js"></script>
+  <script type="module" src="js/admin/package-request.js"></script>
   <script src="js/admin/user-management.js"></script>
 </body>
 
