--- a/src/views/partials/admin/tab-package-requests.ejs
+++ b/src/views/partials/admin/tab-package-requests.ejs
@@ -1,4 +1,4 @@
 <div class="tab-pane" id="pane2">
     <div class="admin-header">Package Requests</div>
-    <%- include('user-section.ejs'); %>
+    <%- include('item-section.ejs', {type: 'package'}); %>
 </div>
