--- a/src/views/partials/admin/tab-user-applications.ejs
+++ b/src/views/partials/admin/tab-user-applications.ejs
@@ -1,4 +1,4 @@
 <div class="tab-pane" id="pane1">
     <div class="admin-header">User Applications</div>
-    <%- include('user-section.ejs'); %>
+    <%- include('item-section.ejs', {type: 'user'}); %>
 </div>
